objects/tffa__DueDiligenceItem__c.object
<CustomObject>
    <description>List of answers  which are captured for the applicant against the CDD questions. CDD questions can be fetched from KBA third party systems.</description>
    <fields>
        <fullName>tffa__Choices__c</fullName>
        <description>A JSON string representing a choice array ({ name: String, value: String }[]). Each choice has a name which is the label or display name or text of the choice and a value which is the value or id of the choice. Applicable when the answer is of type SELECT.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Choices</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>A logical name that uniquely identifies the item among a list. Can be a question code.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Correctness__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The quality of the information or answer captured.</description>
        <label>Correctness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Additional information/details about the item.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DueDiligence__c</fullName>
        <description>Reference to parent due diligence.</description>
        <label>Due Diligence</label>
        <referenceTo>tffa__DueDiligence__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__Group__c</fullName>
        <description>Can be used to group related items.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Label__c</fullName>
        <description>The question text, or a display name.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__LongValue__c</fullName>
        <description>The full value of the answer captured in case it spans over 255 characters.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Long value</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether value is required. Applicable to type QUESTION.</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>The order of the item w.r.t other items.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Tags__c</fullName>
        <description>Additional (marker) information about the item.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <defaultValue>&quot;QUESTION&quot;</defaultValue>
        <description>The nature of the item. A DueDiligence item can hold OOW questions, or results related to a DueDiligence activity, e.g. name mismatch, phone mismatch, etc</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceItemType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ValueName__c</fullName>
        <description>The display text for the answer captured. Useful when the answer is an item in a picklist. In such cases, item label is stored in this field for reference.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Value (text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ValueType__c</fullName>
        <defaultValue>&quot;TEXT&quot;</defaultValue>
        <description>The type for the answer captured.</description>
        <label>Value type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AnswerType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Value__c</fullName>
        <description>The value of the answer captured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Due Diligence Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Due Diligence Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>